force-app/main/default/objects/Online_Claim_Draft__c/Online_Claim_Draft__c.object-meta.xml
<CustomObject>
    <label>Online Claim Draft</label>
    <nameField>
        <displayFormat>OWCD-{0000000000}</displayFormat>
        <label>Online Claim Draft Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Claim Drafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>