force-app/main/default/objects/Online_Claim_Draft__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Online Claim Drafts</relationshipLabel>
    <relationshipName>Online_Claim_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>