force-app/main/default/objects/Online_Claim_Draft__c/fields/Draft_JSON__c.field-meta.xml
<CustomField>
    <fullName>Draft_JSON__c</fullName>
    <label>Draft JSON</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>