force-app/main/default/objects/Online_Claim_Draft__c/fields/Section_Id__c.field-meta.xml
<CustomField>
    <fullName>Section_Id__c</fullName>
    <label>Section Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>